@@ -1,3 +1,9 @@
+2003-07-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/pthread/aio_cancel.c (aio_cancel): Return AIO_ALLDONE
+	if aiocbp != NULL and has already completed.  Return -1/EINVAL if
+	aiocbp->aio_fildes does not match fildes.
+
 2003-07-24  Ulrich Drepper  <drepper@redhat.com>
 
 	* timezone/zic.c (rpytime): Replace cheap overflow check with a
